--- a/pom.xml
+++ b/pom.xml
@@ -29,19 +29,34 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Example dependencies, replace with your actual ones -->
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
+             <dependency>
+                 <groupId>org.springframework</groupId>
+                 <artifactId>spring-context</artifactId>
+                 <version>${spring.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.springframework</groupId>
+                 <artifactId>spring-test</artifactId>
+                 <version>${spring.version}</version>
+                 <scope>test</scope>
+             </dependency>
+             <dependency>
+                 <groupId>org.springframework</groupId>
+                 <artifactId>spring-core</artifactId>
+                 <version>${spring.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>org.springframework</groupId>
+                 <artifactId>spring-beans</artifactId>
+                 <version>${spring.version}</version>
+             </dependency>
+             <dependency>
+                 <groupId>junit</groupId>
+                 <artifactId>junit</artifactId>
+                 <version>${junit.version}</version>
+                 <scope>test</scope>
+             </dependency>
+         </dependencies>
     </dependencyManagement>
 
     <build>
